Edited html file

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!-- Logo Section (Circular Image) -->
     <div class="logo-section">
-      <img src="images/image1.jpeg" alt="Logo with musical notes">
+      <img src="image1.jpeg" alt="Logo with musical notes">
     </div>
 
     <!-- Professional Summary -->
@@ -51,7 +51,7 @@
       <p>
         With a background in Java, JSP, and dynamic UI development, I continuously seek challenges that push the boundaries of what's possible in tech.
       </p>
-      <a href="resume.pdf" class="download-btn">Download CV</a>
+      <a href="Laz_Resume.pdf" class="download-btn">Download CV</a>
     </div>
   </section>
 
