Added real links to the contact information

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Professional Summary -->
     <div class="info-section">
       <p>
-        Passionate about creating robust, scalable software solutions, I specialize in enterprise web development using modern frameworks and technologies.
+        Passionate about creating robust, scalable software solutions, I specialize in enterprise software development using modern frameworks and technologies.
         I blend creativity with technical expertise to deliver products that provide real value.
       </p>
       <p>
@@ -79,8 +79,8 @@
     <h2>Contact</h2>
     <p>
       I'm open to discussing innovative projects and career opportunities. Reach out to me via:
-      <br>Email: example@example.com
-      <br>LinkedIn: linkedin.com/in/IsmoilovLazizbek
+      <br> <a href="mailto:ismoilovlazizbek171@gmail.com"> Email</a>
+      <br> <a href="https://www.linkedin.com/in/lazizbek-ismoilov-5a7aba2b7">LinkedIn</a>
     </p>
   </section>
 </div>
